--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -2,10 +2,10 @@ name: generate
 on:
   pull_request:
     branches:
-      - master
+      - main
   push:
     branches:
-      - master
+      - main
 
 jobs:
   generate:
