--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -7,11 +7,13 @@ on:
     branches:
       - main
 
+env:
+  CPPWINRT_VERSION: 2.0.210505.3
 jobs:
   generate:
     runs-on: windows-latest
     steps:
       - name: Setup CppWinRT
-        run: Install-Package Microsoft.Windows.CppWinRT
+        run: Install-Package Microsoft.Windows.CppWinRT -Version ${CPPWINRT_VERSION}
       - name: Generate headers
         run: cppwinrt.exe -in local -verbose
