--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -13,6 +13,9 @@ jobs:
   generate:
     runs-on: windows-latest
     steps:
+      - uses: nuget/setup-nuget@v1
+        with:
+          nuget-version: latest
       - name: Setup CppWinRT
         run: Install-Package Microsoft.Windows.CppWinRT -Version ${CPPWINRT_VERSION}
       - name: Generate headers
