--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Download CppWinRT
         run: wget https://github.com/microsoft/cppwinrt/releases/download/${{ env.CPPWINRT_VERSION }}/Microsoft.Windows.CppWinRT.${{ env.CPPWINRT_VERSION }}.nupkg -O cppwinrt.nupkg
       - name: Setup CppWinRT
-        run: Install-Package cppwinrt.nupkg
+        run: Install-Package .\cppwinrt.nupkg
       - name: Generate headers
         run: cppwinrt.exe -in local -verbose
