--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -13,11 +13,11 @@ jobs:
   generate:
     runs-on: windows-latest
     steps:
-      - name: Install wget
-        run: choco install wget --no-progress
-      - name: Download CppWinRT
-        run: wget https://github.com/microsoft/cppwinrt/releases/download/${{ env.CPPWINRT_VERSION }}/Microsoft.Windows.CppWinRT.${{ env.CPPWINRT_VERSION }}.nupkg -O $(Join-Path $PSScriptRoot 'cppwinrt.nupkg')
+      - name: Setup NuGet
+        uses: nuget/setup-nuget@v1
+        with:
+          nuget-version: latest
       - name: Setup CppWinRT
-        run: Install-Package $(Join-Path $PSScriptRoot 'cppwinrt.nupkg')
+        run: nuget install Microsoft.Windows.CppWinRT -Version ${{ CPPWINRT_VERSION }}
       - name: Generate headers
         run: cppwinrt.exe -in local -verbose
