--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -19,5 +19,9 @@ jobs:
           nuget-version: latest
       - name: Setup CppWinRT
         run: nuget install Microsoft.Windows.CppWinRT -Version ${{ env.CPPWINRT_VERSION }}
+      - name: Test
+        shell: bash
+        run: |
+          ls -laR
       - name: Generate headers
         run: cppwinrt.exe -in local -verbose
