--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -27,7 +27,14 @@ jobs:
         shell: bash
         run: tar czfv winrt.tar.gz winrt
 
+      - name: Check version
+        if: startsWith(github.ref, 'refs/tags/')
+        shell: bash
+        run: |
+          tag=${GITHUB_REF#refs/tags/}
+          test "${tag}" = "${{ env.CPPWINRT_VERSION }}"
       - name: Deploy
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
